cj-bitcoinj-dsl-js: Use JDK 17+ and Standalone Nashorn